# hash

./: .ghci  README.md  default.nix  hash.cabal  release.nix
src/: .gitignore  Main.hs  MiniTodo.hs  UI.hs
