name: hash
version: 1.0.0
license: BSD3
license-file: LICENSE
cabal-version: >= 1.18
build-type: Simple

executable hash
    build-depends: base < 5

                 , pipes
                 , pipes-network
                 , pipes-safe

                 , bytestring
                 , text
                 , vector
                 , unordered-containers
                 , containers
                 , mtl
                 , transformers

                 , network
                 , network-simple

                 , aeson

                 , megaparsec
                 , attoparsec
                 , parsers
                 , trifecta

                 , lens
                 , lens-aeson

                 , async
                 , parallel
                 , parallel-io

                 , reflex
                 , reflex-dom

    main-is: Main.hs
    other-modules: MiniTodo
    default-language: Haskell2010

    hs-source-dirs: src
